# mquickjs

./: .gitignore  .gitmodules  AGENTS.md  CLI_PORT_PLAN.md  Cargo.toml  FIX_INTEGRATION_TESTS.md  ROADMAP.md  STATUS.md  TESTING.md  build.rs
.github/workflows/: ci.yml
crates/mquickjs-build/: Cargo.toml
crates/mquickjs-build/src/: lib.rs
crates/mquickjs-cli/: Cargo.toml
crates/mquickjs-cli/src/: main.rs  readline.rs  readline_tty.rs
ctests/: CMakeLists.txt  cutils_unicode_from_utf8_catch2_test.cpp  dtoa_udiv1norm_catch2_test.cpp  dtoa_udiv1norm_helpers.c  dtoa_udiv1norm_helpers.h  gen_stdlib.cmake  js_call_catch2_test.cpp  js_parse_statement_catch2_test.cpp  lre_exec_catch2_test.cpp  mqjs_stdlib_stubs.c  mqjs_stdlib_wrapper.c  parser_bytecode_catch2_test.cpp  run_catch2.sh
src/: api.rs  array_buffer.rs  array_data.rs  atom.rs  builtins.rs  bytecode.rs  capi_defs.rs  cfunction_data.rs  closure_data.rs  containers.rs  context.rs  context_shell.rs  conversion.rs  cutils.rs  dtoa.rs  enums.rs  error_data.rs  exception.rs  function_bytecode.rs  gc.rs  gc_ref.rs  gc_runtime.rs  heap.rs  interpreter.rs  js_libm.rs  jsvalue.rs  lib.rs  list.rs  memblock.rs  memblock_views.rs  object.rs  opcode.rs  parser_pos.rs  parser_types.rs  property.rs  regexp.rs  rom_class.rs  runtime.rs  softfp.rs  stdlib.rs  (+2 more)
src/parser/: control_flow.rs  emit.rs  entry.rs  error.rs  expr.rs  json.rs  lexer.rs  lvalue.rs  mod.rs  parse_stack.rs  parse_state.rs  pc2line.rs  pos.rs  property_name.rs  regexp.rs  regexp_flags.rs  runtime.rs  stack_size.rs  tokens.rs  types.rs  vars.rs
src/stdlib/: cfunc.rs  mod.rs  stdlib_def.rs  stdlib_image.rs
src/string/: js_string.rs  mod.rs  runtime.rs  string_char_buf.rs  string_pos_cache.rs
tests/: integration_tests.rs
