[package]
name = "mquickjs-cli"
version = "0.0.1"
edition = "2024"
description = "CLI for mquickjs (port of mqjs)"
license = "MIT"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
mquickjs = { path = "../.." }
libc = "0.2.170"
cfg-if = "1.0.0"

[[bin]]
name = "mquickjs-cli"
path = "src/main.rs"
